--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header id="header">
-        <h1>Daily Planner</h1>
-        <p>Plan your day with this simple daily planner</p>
-        <div id="date-time"></div>
+        <h1 class="row">Daily Planner</h1>
+        <pclass="row">Plan your day with this simple daily planner</p>
+        <div id="date-time" class="row"></div>
     </header>
     <main id="container"></main>
     <footer id="footer"></footer>
